# edc_2023_rust

./: README.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
solutions/: Cargo.toml
solutions/all/: Cargo.toml
solutions/all/src/: main.rs
solutions/hello_jwks/: Cargo.toml
solutions/hello_jwks/src/: auth.rs  main.rs
