[package]
name = "hello_jwks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-jwks = { path="../axum-jwks" }
axum = { version = "0.6.20", features = ["headers"] }
jsonwebtoken = "8.3.0"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
